          (thanks to Scott Kostyshak).
- TW-1881 Missing last character(s) in Description field
          (thanks to Hubert Toullec).
- TW-1881 default.scheduled seems not to work
          (thanks to Onion).
- TW-1885 Task Sync does not send TLS SNI headers
          (thanks to Dan Callahan).
- TW-1903 grammar error -- There are 1 local changes.
          (thanks to Eric Hymowitz).
- TW-1910 unreachable statement
          (thanks to Martin Strunz).
- TW-1930 Typo in help
          (thanks to Kai HTML).
- TW-1935 Separate verbosity category for rc overrides
          (thanks to Paul J. Fenwick)
- TW-1936 Tweak tests to have fuller TAP compliance
          (thanks to Paul J. Fenwick)
- TW-1938 Adjust behaviour of new-uuid and new-id verbosity levels
          (thanks to Paul J. Fenwick)
- TW-1947 "urgency.over" filter seems to not work correct
          (thanks to Marc Richter).
- Added 'juhannus' as a synonym for 'midsommarafton'
          (thanks to Lynoure Braakman).
- Deprecated the 'DUETODAY' virtual tag, which is a synonym for the 'TODAY'
  virtual tag.
- Removed deprecated 'alias._query' setting.
- Fixed ambiguity in the esp-ESP localization
          (thanks to Fidel Mato).
- Deprecated the 'new-uuid' verbosity option, since its functionality can be
  removed by merging with 'new-id'.
- Correct a false-positive warning when a due date is removed and a wait is
  added.
- Added 'QUARTER' virtual tag.
- Fixed unquoted glob in bash completion script
          (thanks to Ran Benita).
- Deprecated use of alternate Boolean configuration settings. Use values "0" for
  off, and "1" for on. Avoid used of "on", "off", "true", "t", "false", "f",
  "yes", "y", "no", "n".
- Fixed test harness for Python 3.x.
          (thanks to jrabbit).
- Improved certificate validation diagnostics
          (thanks to Jelle van der Waa).
- Improved portability for SunOS-like OSes.
          (thanks to Antonio Huete Jimenez).